--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Lendex - Personal Portfolio Bootstrap Template</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="" />
+    <title>Ahiakwo John | King Johney | Personal Portfolio</title>
+    <meta name="google-site-verification" content="kPLvIfhbnNg0RpF-CkdQv8L1L8gIpkP5dVdCb16wvOk" />
+    <meta name="description" content="I am Ahiakwo John also known as King Johney, and I'm a fullstack web and mobile developer.">
+   <meta name="keywords" content="Ahiakwo John, King Johney, Johney, Developer, Threndin, Threndify, Fullstack devloper, youngest nigerian developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
     <link
