--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="zxx">
-  <!-- Mirrored from htmldemo.net/lendex/lendex/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 20:47:02 GMT -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Ahiakwo John | King Johney | Personal Portfolio</title>
-    <meta name="google-site-verification" content="kPLvIfhbnNg0RpF-CkdQv8L1L8gIpkP5dVdCb16wvOk" />
-    <meta name="description" content="I am Ahiakwo John also known as King Johney, and I'm a fullstack web and mobile developer.">
-   <meta name="keywords" content="Ahiakwo John, King Johney, Johney, Developer, Threndin, Threndify, Fullstack devloper, youngest nigerian developer">
+    <meta
+      name="google-site-verification"
+      content="kPLvIfhbnNg0RpF-CkdQv8L1L8gIpkP5dVdCb16wvOk"
+    />
+    <meta
+      name="description"
+      content="I am Ahiakwo John also known as King Johney, and I'm a fullstack web and mobile developer."
+    />
+    <meta
+      name="keywords"
+      content="Ahiakwo John, King Johney, Johney, Developer, Threndin, Threndify, Fullstack devloper, youngest nigerian developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
     <link
@@ -303,7 +311,6 @@
                 class="img-fluid"
                 src="assets/images/portrait/portrait-hero.png"
                 alt=""
-
                 width="600px"
               />
 
@@ -336,84 +343,131 @@
         </div>
 
         <!-- Start Service Section Wrapper -->
+
         <div class="service-display-wrapper">
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <div class="service-display-slider">
+                <div class="service-display-grid">
                   <!-- Slider main container -->
-                  <div class="swiper-container">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                      <!-- Slides -->
-                      <!-- Start Service Box Single Item -->
-                      <div class="service-box-single-item swiper-slide">
-                        <div class="inner-shape inner-shape-top-right"></div>
-                        <div class="icon">
-                          <img
-                            src="assets/images/icon/service-icon-1.png"
-                            alt=""
-                          />
-                        </div>
-                        <h4 class="title">
-                          <a href="service-details.html">UI/UX Design</a>
-                        </h4>
-                        <ul class="list-item">
-                          <li>Landing Pages</li>
-                          <li>User Flow</li>
-                          <li>Wireframing</li>
-                          <li>Prototyping</li>
-                          <li>Mobile App Design</li>
-                        </ul>
-                        <div class="inner-shape inner-shape-bottom-right"></div>
-                      </div>
-                      <!-- End Service Box Single Item -->
-                      <!-- Start Service Box Single Item -->
-                      <div class="service-box-single-item swiper-slide">
-                        <div class="inner-shape inner-shape-top-right"></div>
-                        <div class="icon">
-                          <img
-                            src="assets/images/icon/service-icon-2.png"
-                            alt=""
-                          />
-                        </div>
-                        <h4 class="title">
-                          <a href="service-details.html">Development</a>
-                        </h4>
-                        <ul class="list-item">
-                          <li>HTML/CSS</li>
-                          <li>JavaScript</li>
-                          <li>Animation</li>
-                          <li>WordPress</li>
-                          <li>React</li>
-                        </ul>
-                        <div class="inner-shape inner-shape-bottom-right"></div>
-                      </div>
-                      <!-- End Service Box Single Item -->
-                      <!-- Start Service Box Single Item -->
-                      <div class="service-box-single-item swiper-slide">
-                        <div class="inner-shape inner-shape-top-right"></div>
-                        <div class="icon">
-                          <img
-                            src="assets/images/icon/service-icon-3.png"
-                            alt=""
-                          />
-                        </div>
-                        <h4 class="title">
-                          <a href="service-details.html">Illustration</a>
-                        </h4>
-                        <ul class="list-item">
-                          <li>Character Design</li>
-                          <li>Icon Set</li>
-                          <li>Illustration Guide</li>
-                          <li>Illustration Set</li>
-                          <li>Motion Graphic</li>
-                        </ul>
-                        <div class="inner-shape inner-shape-bottom-right"></div>
-                      </div>
-                      <!-- End Service Box Single Item -->
+
+                  <!-- Slides -->
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-1.png" alt="" />
                     </div>
+                    <h4 class="title">
+                      <a href="service-details.html">UI/UX Design</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>Landing Pages</li>
+                      <li>User Flow</li>
+                      <li>Wireframing</li>
+                      <li>Prototyping</li>
+                      <li>Mobile App Design</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
                   </div>
+                  <!-- End Service Box Single Item -->
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-2.png" alt="" />
+                    </div>
+                    <h4 class="title">
+                      <a href="service-details.html">Website Development</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>HTML/CSS</li>
+                      <li>JavaScript</li>
+                      <li>React</li>
+                      <li>Nextjs</li>
+                      <li>Typescript</li>
+                      <li>WordPress</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
+                  </div>
+                  <!-- End Service Box Single Item -->
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-3.png" alt="" />
+                    </div>
+                    <h4 class="title">
+                      <a href="service-details.html">Backend Development</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>Nodejs</li>
+                      <li>PHP - Laravel</li>
+                      <li>Python</li>
+                      <li>Database Design & Optimization</li>
+                      <li>Database Management</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
+                  </div>
+                  <!-- End Service Box Single Item -->
+
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-3.png" alt="" />
+                    </div>
+                    <h4 class="title">
+                      <a href="service-details.html">Mobile App Development</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>React Native</li>
+                      <li>Flutter</li>
+                      <li>Enterprise Mobile Apps</li>
+                      <li>E-commerce Mobile Apps</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
+                  </div>
+                  <!-- End Service Box Single Item -->
+
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-3.png" alt="" />
+                    </div>
+                    <h4 class="title">
+                      <a href="service-details.html">Web App Development</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>Content Management Systems</li>
+                      <li>Enterprise Management Systems</li>
+                      <li>Online Portal</li>
+                      <li>Progressive Web Applications (PWAs)</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
+                  </div>
+                  <!-- End Service Box Single Item -->
+
+                  <!-- Start Service Box Single Item -->
+                  <div class="service-box-single-item">
+                    <div class="inner-shape inner-shape-top-right"></div>
+                    <div class="icon">
+                      <img src="assets/images/icon/service-icon-3.png" alt="" />
+                    </div>
+                    <h4 class="title">
+                      <a href="service-details.html">Illustration</a>
+                    </h4>
+                    <ul class="list-item">
+                      <li>Character Design</li>
+                      <li>Icon Set</li>
+                      <li>Illustration Guide</li>
+                      <li>Illustration Set</li>
+                      <li>Motion Graphic</li>
+                    </ul>
+                    <div class="inner-shape inner-shape-bottom-right"></div>
+                  </div>
+                  <!-- End Service Box Single Item -->
                 </div>
               </div>
             </div>
@@ -1237,6 +1291,4 @@
     <!--Main JS (Common Activation Codes)-->
     <script src="assets/js/main.js"></script>
   </body>
-
-  <!-- Mirrored from htmldemo.net/lendex/lendex/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 20:49:45 GMT -->
 </html>
