--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                       <li>Ecommerce Website</li>
                       <li>WordPress Websites</li>
                       <li>Web3 Development</li>
-                      <li>HTML, CSS, JavaScript, React, NextJs, TypeScript, Tailwind</li>
+                      <li>HTML, CSS, JavaScript, React, NextJs, TypeScript, Tailwind, Vue, Shadcn</li>
                     </ul>
                     <div class="inner-shape inner-shape-bottom-right"></div>
                   </div>
@@ -321,9 +321,9 @@
                       <a href="service-details.html">Backend Development</a>
                     </h4>
                     <ul class="list-item">
-                      <li>Nodejs/NestJs</li>
+                      <li>Nodejs, NestJs, Express</li>
                       <li>PHP - Laravel</li>
-                      <li>Python</li>
+                      <li>Python, Django, Flask, FastApi</li>
                       <li>Database Design & Optimization</li>
                       <li>Database Management</li>
                     </ul>
@@ -390,7 +390,7 @@
                   <div class="skill-progress-single-item">
                     <span class="tag">Communication</span>
                     <div class="skill-box">
-                      <div class="progress-line" data-width="75">
+                      <div class="progress-line" data-width="95">
                         <span class="skill-percentage">95%</span>
                       </div>
                     </div>
@@ -400,7 +400,7 @@
                   <div class="skill-progress-single-item">
                     <span class="tag">Leadership</span>
                     <div class="skill-box">
-                      <div class="progress-line" data-width="70">
+                      <div class="progress-line" data-width="90">
                         <span class="skill-percentage">90%</span>
                       </div>
                     </div>
@@ -410,7 +410,7 @@
                   <div class="skill-progress-single-item">
                     <span class="tag">Teamwork</span>
                     <div class="skill-box">
-                      <div class="progress-line" data-width="90">
+                      <div class="progress-line" data-width="100">
                         <span class="skill-percentage">100%</span>
                       </div>
                     </div>
@@ -420,7 +420,7 @@
                   <div class="skill-progress-single-item">
                     <span class="tag">Flexibility</span>
                     <div class="skill-box">
-                      <div class="progress-line" data-width="80">
+                      <div class="progress-line" data-width="95">
                         <span class="skill-percentage">95%</span>
                       </div>
                     </div>
@@ -991,8 +991,7 @@
                     </li>
                     <li>
                       <a href="https://github.com/kingjohneycodey" target="_blank"
-                        ><i class="icofont-github"></i
-                      ></a>
+                        ><img src="./assets/images/github.jpeg" style="width: 20px; border-radius: 50%;" alt=""> </a>
                     </li>
                   </ul>
                 </div>
