--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
                       <li>Flutter</li>
                       <li>Enterprise Mobile Apps</li>
                       <li>E-commerce Mobile Apps</li>
+                      <li>Fintech Apps</li>
+                      <li>E-Learning Apps</li>
                     </ul>
                     <div class="inner-shape inner-shape-bottom-right"></div>
                   </div>
